--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section class="home" id="home">
       <h3>HI THERE !</h3>
       <h1>I'M <span>Ram Swami</span></h1>
-      <p>I am a Web developer with industry experience building websites. I specialize in C++ and C. I solve problems in creative ways. I have learned the importance of applying classical strategies to modern-day projects.</p>
+      <p>I am a Web developer with industry experience building websites. I specialize in dot net. I solve problems in creative ways. I have learned the importance of applying classical strategies to modern-day projects.</p>
       <a href="#about"><button class="btn">about me <i class="fas fa-user"></i></button></a>
     </section>
 
@@ -58,7 +58,7 @@
       <div class="row">
         <div class="info">
           <h3> <span> name : </span> Ram Swami</h3>
-          <h3> <span> age : </span> 20 </h3>
+          <h3> <span> age : </span> 21 </h3>
           <h3> <span> qualification : </span> bca</h3>
           <h3> <span> post : </span> Web devloper</h3>
           <h3> <span> linkdin : </span> ramswami0021</h3>
@@ -68,19 +68,19 @@
 
         <div class="counter">
           <div class="box">
-            <span>1++</span>
+            <span>01++</span>
             <h3>years of experience</h3>
           </div>
           <div class="box">
-            <span>50+</span>
+            <span>10+</span>
             <h3>projects compuleted</h3>
           </div>
           <div class="box">
-            <span>100+</span>
+            <span>30+</span>
             <h3>Happy clients</h3>
           </div>
           <div class="box">
-            <span>10+</span>
+            <span>05+</span>
             <h3>Awards win</h3>
           </div>
         </div>
