--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ram Swami the Web devloper</title>
     
-    <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="img/pic.jpeg">
 
      <!-- coustom css link -->
      <link rel="stylesheet" href="css/style.css" />
