--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ram Swami The Software devloper</title>
+    <title>Ram Swami The Software Developer</title>
     
     <link rel="shortcut icon" type="image/x-icon" href="img/pic.jpeg">
 
@@ -60,7 +60,7 @@
           <h3> <span> name : </span> Ram Swami</h3>
           <h3> <span> age : </span> 21 </h3>
           <h3> <span> qualification : </span> bca</h3>
-          <h3> <span> post : </span> Web devloper</h3>
+          <h3> <span> post : </span> Software Devloper</h3>
           <h3> <span> linkdin : </span> ramswami0021</h3>
           <h3> <span> mail : </span> ramswami0021@gmail.com</h3>
           <a href="https://drive.google.com/file/d/10dacoF3Ff77na-G3aUv-WC-ueThegU4m/view?usp=sharing"><button class="btn">download cV <i class="fas fa-download"></i></button></a>
@@ -102,21 +102,15 @@
         </div>
         <div class="box">
           <i class="fas fa-graduation-cap"></i>
-          <span>2020</span>
-          <h3>front-end web devloper</h3>
-          <p>I am a Web developer with industry experience building websites. I specialize in C++ and C. I solve problems in creative ways. I have learned the importance of applying classical strategies to modern-day projects.</p>
-        </div>
-        <div class="box">
-          <i class="fas fa-graduation-cap"></i>
           <span>2019</span>
-          <h3>front-end web devloper</h3>
-          <p>I am a Web developer with industry experience building websites. I specialize in C++ and C. I solve problems in creative ways. I have learned the importance of applying classical strategies to modern-day projects.</p>
+          <h3>12th Standard</h3>
+          <p>Impulse Coaching Pvt. Ltd.</p>
         </div>
         <div class="box">
           <i class="fas fa-graduation-cap"></i>
-          <span>2018</span>
-          <h3>front-end web devloper</h3>
-          <p>I am a Web developer with industry experience building websites. I specialize in C++ and C. I solve problems in creative ways. I have learned the importance of applying classical strategies to modern-day projects.</p>
+          <span>2017</span>
+          <h3>10th Standard</h3>
+          <p>Indian International School</p>
         </div>
       </div>
     </section>
