--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <h3> <span> post : </span> Software Devloper</h3>
           <h3> <span> linkdin : </span> ramswami0021</h3>
           <h3> <span> mail : </span> ramswami0021@gmail.com</h3>
-          <a href="https://drive.google.com/file/d/10dacoF3Ff77na-G3aUv-WC-ueThegU4m/view?usp=sharing"><button class="btn">download cV <i class="fas fa-download"></i></button></a>
+          <a href="https://drive.google.com/file/d/10dacoF3Ff77na-G3aUv-WC-ueThegU4m/view?usp=sharing" targer="_blank"><button class="btn">download cV <i class="fas fa-download"></i></button></a>
         </div>
 
         <div class="counter">
