--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <li><a href="#home">Home</a></li>
           <li><a href="#about">about</a></li>
           <li><a href="#education">education</a></li>
-          <li><a href="#portfolio">portfolio</a></li>
+          <li><a href="#portfolio">gallery</a></li>
           <li><a href="#contact">contact</a></li>
         </ul>
       </nav>
@@ -119,22 +119,16 @@
 
     <!-- Portfolio Section Start -->
     <section class="portfolio" id="portfolio">
-      <h1 class="heading">my <span>portfolio</span></h1>
+      <h1 class="heading">my <span>gallery</span></h1>
       <div class="box-container">
         <div class="box">
-          <img src="images/img1.jpg" alt="">
+          <img src="images/Ram3" alt="">
         </div>
         <div class="box">
-          <img src="images/img2.jpg" alt="">
+          <img src="images/Ram2.jpg" alt="">
         </div>
         <div class="box">
-          <img src="images/img3.jpg" alt="">
-        </div>
-        <div class="box">
-          <img src="images/img1.jpg" alt="">
-        </div>
-        <div class="box">
-          <img src="images/img1.jpg" alt="">
+          <img src="images/Ram3.jpg" alt="">
         </div>
       </div>
     </section>
