--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
       <h1 class="heading">my <span>gallery</span></h1>
       <div class="box-container">
         <div class="box">
-          <img src="images/Ram3" alt="">
+          <img src="images/ram3" alt="">
         </div>
         <div class="box">
-          <img src="images/Ram2.jpg" alt="">
+          <img src="images/ram2.jpg" alt="">
         </div>
         <div class="box">
-          <img src="images/Ram3.jpg" alt="">
+          <img src="images/ram3.jpg" alt="">
         </div>
       </div>
     </section>
