--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <img src="images/ram2.jpeg" alt="">
         </div>
         <div class="box">
-          <img src="images/ram3.jpeg" alt="">
+          <img src="https://github.com/Ram616/RamBabu-Portfolio/blob/main/images/ram2.jpeg" alt="">
         </div>
       </div>
     </section>
