--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           <input type="text" placeholder="name" class="box">
           <input type="email" placeholder="email" class="box">
           <input type="text" placeholder="project" class="box">
-          <textarea name="" id="" cols="30" rows="10" placeholder="message" class="box message"></textarea>
+          <textarea name="messsage" id="" cols="30" rows="10" placeholder="message" class="box message"></textarea>
           <button type="submit" class="btn">Send <i class="fas fa-paper-plane"></i></button>
         </form>
       </div>
