--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           </div>
         </div>
 
-        <form action="">
+        <form action="main.php">
           <input type="text" placeholder="name" class="box">
           <input type="email" placeholder="email" class="box">
           <input type="text" placeholder="project" class="box">
