--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
 function myFunction() {
   alert("Thank You For Visiting Here!");
 }
+      onload="alert('Thanks... I feel much better now!');" style="font-size:2em;background:lime">
 </script>
     
   </body>
