--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
   </head>
-  <body>
+  <body onload="myFunction1()">
     <!-- HEADER SECTION START -->
     <header>
       <div class="user">
@@ -173,7 +173,9 @@
 function myFunction() {
   alert("Thank You For Visiting Here!");
 }
-      onload="alert('Thanks... I feel much better now!');" style="font-size:2em;background:lime">
+      function myFunction1() {
+  alert('Thanks... I feel much better now!');
+}
 </script>
     
   </body>
